--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,6 +8,9 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
+.text-light-gray{
+    color: #727272;
+}
 
 .btn-primary {
     border-radius: 8px;
@@ -66,42 +69,16 @@ nav li a {
     color: #131313;
 }
 
-.banner-description {
-    color: #727272;
-}
-
 .banner img {
     margin-top: 20px;
     width: 100%;
 }
 
-/* responsive media quaries */
-/* mobile devices */
-@media screen and(max-width:576px) {
-    header {
-        padding: 20px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-}
-
-/* Tablet or Medium devices */
-@media screen and(min-width:576px) and (max-width:960px) {
-    header {
-        padding: 50px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-}
-
 /* main styles */
 main {
     max-width: 1440px;
-    margin: auto;
+    margin: 70px auto;
+
 }
 
 /* teams style */
@@ -127,7 +104,6 @@ main {
 }
 
 .teams-title .quick-list {
-    color: #727272;
     font-weight: 500px;
 }
 
@@ -135,4 +111,36 @@ main {
     color: #FF900E;
     font-weight: 700;
     
+}
+
+/* responsive media quaries */
+/* mobile devices */
+@media screen and(max-width:576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav,
+    .teams-container,
+    {
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+/* Tablet or Medium devices */
+@media screen and(min-width:576px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav, .teams-container {
+        flex-direction: column;
+    }
 }
