--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,7 +8,8 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
-.text-light-gray{
+
+.text-light-gray {
     color: #727272;
 }
 
@@ -21,6 +22,7 @@
     cursor: pointer;
     border: 0;
 }
+
 .section-title {
     font-size: 2.8rem;
     font-weight: 700;
@@ -109,7 +111,31 @@ main {
 .teams-title .text-features {
     color: #FF900E;
     font-weight: 700;
-    
+
+}
+
+/* facts section */
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+
+}
+.facts-card-container .card-stats{
+    font-size:2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /* responsive media quaries */
@@ -122,15 +148,17 @@ main {
     nav,
     .teams-container,
     {
-        flex-direction: column;
-    }
-    .teams-img-container{
-        grid-template-columns: 1fr;
-    }
-    .teams-content {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
+    flex-direction: column;
+}
+
+.teams-img-container {
+    grid-template-columns: 1fr;
+}
+
+.teams-content {
+    padding-left: 20px;
+    padding-right: 20px;
+}
 }
 
 /* Tablet or Medium devices */
@@ -139,7 +167,8 @@ main {
         padding: 50px;
     }
 
-    nav, .teams-container {
+    nav,
+    .teams-container {
         flex-direction: column;
     }
 }
