--- a/styles/architect.css
+++ b/styles/architect.css
@@ -137,16 +137,33 @@ main {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+/* sponsors styles */
+.sponsors{
+    text-align: center;
+}
+
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
 /* responsive media quaries */
 /* mobile devices */
-@media screen and(max-width:576px) {
+@media screen and (max-width: 576px) {
     header {
         padding: 20px;
     }
 
     nav,
     .teams-container,
+    .facts-card-container,
+    .sponsors-img-container
     {
     flex-direction: column;
 }
@@ -155,20 +172,25 @@ main {
     grid-template-columns: 1fr;
 }
 
-.teams-content {
+.teams-content, .facts-card-container {
     padding-left: 20px;
     padding-right: 20px;
+}
+.facts-card-container{
+    gap: 20px;
 }
 }
 
 /* Tablet or Medium devices */
-@media screen and(min-width:576px) and (max-width:960px) {
+@media screen and(min-width: 576px) and (max-width: 960px) {
     header {
         padding: 50px;
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .sponsors-img-container 
+    {
         flex-direction: column;
     }
 }
