--- a/styles/architect.css
+++ b/styles/architect.css
@@ -114,42 +114,84 @@ main {
 
 }
 
+/* features section styles */
+.features {
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+
+}
+
+.features .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+
+.features-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+ .ten-years-badge{
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 342px;
+    padding: 40px;
+    
+
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+
+}
+
+
 /* facts section */
-.facts-card-container{
+.facts-card-container {
     display: flex;
     justify-content: space-around;
 }
+
 .facts-card-container .card {
     border-radius: 8px;
     border: 1px solid #FF900E;
     text-align: center;
     padding: 30px;
 }
-.facts-card-container .card-title{
+
+.facts-card-container .card-title {
     font-weight: 600;
     font-size: 1.25rem;
     margin-top: 5px;
 
 }
-.facts-card-container .card-stats{
-    font-size:2.8rem;
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
     color: #424242;
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 /* sponsors styles */
-.sponsors{
+.sponsors {
     text-align: center;
 }
 
-.sponsors-img-container{
+.sponsors-img-container {
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 40px;
 }
-.sponsors-img-container img{
+
+.sponsors-img-container img {
     width: 165px;
 }
 
@@ -163,22 +205,23 @@ main {
     nav,
     .teams-container,
     .facts-card-container,
-    .sponsors-img-container
-    {
-    flex-direction: column;
-}
+    .sponsors-img-container {
+        flex-direction: column;
+    }
 
-.teams-img-container {
-    grid-template-columns: 1fr;
-}
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
 
-.teams-content, .facts-card-container {
-    padding-left: 20px;
-    padding-right: 20px;
-}
-.facts-card-container{
-    gap: 20px;
-}
+    .teams-content,
+    .facts-card-container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .facts-card-container {
+        gap: 20px;
+    }
 }
 
 /* Tablet or Medium devices */
@@ -189,8 +232,7 @@ main {
 
     nav,
     .teams-container,
-    .sponsors-img-container 
-    {
+    .sponsors-img-container {
         flex-direction: column;
     }
 }
